fixing overflow issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,26 +8,13 @@
     scrollbar-width: thin;  /* Firefox */
 }
 
-input {
-    border: 0;
-    outline: none;
-}
-
-form {
-  display: flex;
-}
-
 html,
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(65, 65, 65);
-}
-
-a {
-  text-decoration: none;
-  color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -44,6 +31,18 @@ a {
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+input {
+  border: 0;
+  outline: none;
+}
+
+form { display: flex; }
 
 .category-btn:hover {
   background-color: #219fca !important;
